fix: NPE in logTicketClose — List.of() does not allow null values
Replace Map.of/List.of with HashMap/Arrays.asList since the close_type
old value is null, and List.of() throws NullPointerException on nulls.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>